--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "accept-language": "^3.0.18",
     "classnames": "^2.3.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-resources-to-backend": "^1.1.4",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.2",
     "sharp": "^0.32.5",
     "typescript": "5.2.2"
   },
