--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.0.2",
     "accept-language": "^3.0.18",
     "classnames": "^2.3.2",
     "eslint": "8.49.0",
